--- a/app/view/trios/about.twig
+++ b/app/view/trios/about.twig
@@ -1,46 +1,50 @@
 {% extends 'layout.twig' %}
 
-{% block stylecontent %}
-<link rel="stylesheet" href="assets/css/trios/about.css">
-{% endblock %}
-
 {% block content %}
-<section id="about" class="ud-about">
+<section class="about">
     <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
-            <div class="ud-about-content-wrapper">
-                <div class="ud-about-content">
-                    <!-- <span class="tag">About Us</span> -->
+        <div class="about-wrapper">
+            <div class="about-content-wrapper">
+                <div class="about-content">
                     <h2>WHO WE ARE</h2>
                     <p>
                         We are The Cognitive Internet of Things (Cognitive IoT) Solution Provider, delivering
-                        Industrial IoT Platform, Sensors devices, IoT Gateway and Edge Computing capabilities along
+                        Industrial IoT Platform, Sensors devices, IoT Gateway and Edge Computing capabilities
+                        along
                         with Cloud Platform to help Small, Medium Business and Enterprises to automate any
                         repeatable processes.
                     </p>
-
                     <p>
                         Our solution will help consumers, farmers and manufacturing industries to transcend from
-                        manual monitoring and repeated operations to fully automated digital machinery. We will help
+                        manual monitoring and repeated operations to fully automated digital machinery. We will
+                        help
                         to deploy sensors, actuators, gateway, communications, cloud services based on machine
-                        learning capabilities to empower industries to implement Industry 4.0 / IIoT solutions to
+                        learning capabilities to empower industries to implement Industry 4.0 / IIoT solutions
+                        to
                         meet global business demands.
                     </p>
                     <h2>WHAT WE DO</h2>
                     <p>
                         We Build Technology for Human Wellbeing. As an IoT engineering company, we are building
-                        smart devices and platform to enrich human experiences. We work with our technology partners
-                        to deploy smart sensors, switches, gateway, edge computing devices and advanced information
-                        technology capabilities to meet the global demand of IoT solutions. With strategic business
+                        smart devices and platform to enrich human experiences. We work with our technology
+                        partners
+                        to deploy smart sensors, switches, gateway, edge computing devices and advanced
+                        information
+                        technology capabilities to meet the global demand of IoT solutions. With strategic
+                        business
                         vision, we focus in.
                     </p>
                     <h2>OUR TEAM</h2>
                     <p>
-                        Our IoT Engineers, Data Engineers and Scientist are our core strength. Our Leaders, Mentors,
+                        Our IoT Engineers, Data Engineers and Scientist are our core strength. Our Leaders,
+                        Mentors,
                         and Founders are some of the most successful Technology Experts with over 100 years of
-                        combined experience in the connected business. Each team member within our company brings a
-                        variety of technical expertise that helps us to achieve our customer’s demands and dreams.
-                        In fact, we strongly believe that our employee-oriented culture boosts our commitment to our
+                        combined experience in the connected business. Each team member within our company
+                        brings a
+                        variety of technical expertise that helps us to achieve our customer’s demands and
+                        dreams.
+                        In fact, we strongly believe that our employee-oriented culture boosts our commitment to
+                        our
                         customer’s success.
                     </p>
                 </div>
