--- a/app/view/trios/home.twig
+++ b/app/view/trios/home.twig
@@ -1,117 +1,109 @@
 {% extends 'layout.twig' %}
 
-{% block stylecontent %}
-<link rel="stylesheet" href="assets/css/trios/home.css">
-{% endblock %}
-
 {% block content %}
-
-<section class="ud-hero">
-    <img class="ud-hero-image" src="assets/images/trios/cover.png" width="950" height="750" alt="Cover Image" />
-    <div class="ud-hero-content">
-        <h1 class="ud-hero-title">
-            IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
-            (IOT)<br />
-            THE INTERNET OF THINGS IS ABOUT TO CHANGE IT ALL OVER AGAIN.
-        </h1>
-    </div>
-</section>
-<section id="features" class="ud-features">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="ud-section-title">
-                    <h1>IOT Learning Board</h1>
-                </div>
-                <p class="ud-blog-details-para">
-                    Educators look for low-cost solutions that are easily available in the market, out of the box
-                    ready to use, modular, and self-explanatory. To start learning embedded systems, the first thing
-                    that is pretty basic and common is Arduino and Raspberry Pi. These two embedded boards are
-                    feature-rich, compact size with high computing power and are available with various versions and
-                    in various form factors.
-                </p>
-                <p class="ud-blog-details-para">
-                    But certainly, while learning, one also needs a lot of complementary hardware that is common in
-                    most prototype projects. For example, push-buttons, LEDs, relay, motors, display, sensors,
-                    buzzers, etc.
-                </p>
-                <p class="ud-blog-details-para">
-                    However, during the learning phase, you do not have enough exposure to decide what other
-                    components need to be purchased and what can be the most useful feature that we can have in our
-                    project. It’s only after learning about the sensor that we realize how useful it can be to us in
-                    a specific way.
-                </p>
-                <p class="ud-blog-details-para">
-                    If this initial phase has fewer options to explore, then learning becomes a tedious task and the
-                    enthusiasm that we start with goes to waste. Only theoretical knowledge or reading about sensors
-                    and boards cannot make a good impression as compared to getting hands-on experience while
-                    creating one.
-                </p>
-                <p class="ud-blog-details-para">
-                    This is where the Embedded Learner Board comes into the picture. This learning board is designed
-                    and developed by Trios team it is a new board, it justifies its name because the board is
-                    specifically designed to improve the learning experience of the students. The board can be
-                    easily connected with the help of jumper wire.
-                </p>
-
-                <h2 class="ud-blog-details-title">
-                    Single Board for entire Solutions of Student Projects
-                </h2>
-
-                <div class="ud-blog-details-image">
-                    <img src="assets/images/learning_board.png" loading="lazy" alt="Learning Board" height="500px"
-                        width="1110px" />
-                </div>
-
-                <p class="ud-blog-details-para">
-                <h3 class="ud-blog-details-subtitle">Features</h3>
-                </p>
-
-                <p class="ud-blog-details-para">
-                    Embedded Learner Board has a lot of essential basic components designed on to the board, i.e.,
-                    16×2 alphanumeric display, Relay, Potentiometer, IOT module.
-                </p>
-                <p class="ud-blog-details-para">
-                    The board can be easily mounted on another board or project with the help of a mounting hole.
-                </p>
-                <p class="ud-blog-details-para">
-                    All Sensors are Plug_and_play.
-                </p>
-                <p class="ud-blog-details-para">
-                    Auto Programmable.
-                </p>
-                <p class="ud-blog-details-para">
-                    Turn on/off loads using relays (4 Relays).
-                </p>
-                <p class="ud-blog-details-para">
-                    Loads can be turned ON using webpage.
-                </p>
-                <p class="ud-blog-details-para">
-                    Smart WIFI configuration is available.
-                </p>
-                <p class="ud-blog-details-para">
-                    The firmware/code can be upgraded over the air.
-                </p>
-                <p class="ud-blog-details-para">
-                    There is a common power supply to all the elements if needed. The size of the board is quite
-                    compact even with so many components on the board.
-                </p>
-                <p class="ud-blog-details-para">
-                    Also, the hardware part is really affordable and low-cost compared to the market cost of
-                    individual components..
-                </p>
-                <p class="ud-blog-details-para">
-                    These sessions are quite informative. The concept of these sessions is to explore the
-                    possibilities that can be developed with the board. This learner board has a good potential to
-                    at least create a good competition in the market for such learner boards.
-                </p>
-                <p class="ud-blog-details-para">
-                    All in all, the Embedded Learner Board by trios is a revolutionary DIY embedded learning system
-                    that not only teaches you programming and coding but also gives a hands-on learning experience.
-                </p>
+<!--Hero content Start-->
+<header class="hero">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12 text-center">
+                <h1 class="hero-title">
+                    IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
+                    (IOT)<br />
+                    THE INTERNET OF THINGS IS ABOUT TO CHANGE IT ALL OVER AGAIN.
+                </h1>
             </div>
         </div>
     </div>
-</section>
+</header>
+<!--Hero content End-->
 
+<!-- Page Content -->
+<section class="py-5">
+    <div class="container">
+        <h2 class="py-3 fw-light">IOT Learning Board</h2>
+        <p>
+            Educators look for low-cost solutions that are easily available in the market, out of the box
+            ready to use, modular, and self-explanatory. To start learning embedded systems, the first thing
+            that is pretty basic and common is Arduino and Raspberry Pi. These two embedded boards are
+            feature-rich, compact size with high computing power and are available with various versions and
+            in various form factors.
+        </p>
+        <p>
+            But certainly, while learning, one also needs a lot of complementary hardware that is common in
+            most prototype projects. For example, push-buttons, LEDs, relay, motors, display, sensors,
+            buzzers, etc.
+        </p>
+        <p>
+            However, during the learning phase, you do not have enough exposure to decide what other
+            components need to be purchased and what can be the most useful feature that we can have in our
+            project. It’s only after learning about the sensor that we realize how useful it can be to us in
+            a specific way.
+        </p>
+        <p>
+            If this initial phase has fewer options to explore, then learning becomes a tedious task and the
+            enthusiasm that we start with goes to waste. Only theoretical knowledge or reading about sensors
+            and boards cannot make a good impression as compared to getting hands-on experience while
+            creating one.
+        </p>
+        <p>
+            This is where the Embedded Learner Board comes into the picture. This learning board is designed
+            and developed by Trios team it is a new board, it justifies its name because the board is
+            specifically designed to improve the learning experience of the students. The board can be
+            easily connected with the help of jumper wire.
+        </p>
+
+        <h3 class="py-3 fw-light">
+            Single Board for entire Solutions of Student Projects
+        </h3>
+        <div class="py-3 text-center">
+            <img src="assets/images/learning_board.png" class="rounded img-fluid" loading="lazy" alt="Learning Board"
+                height="500px" width="1110px" />
+        </div>
+
+        <h3 class="py-3 fw-light">Features</h3>
+
+        <p>
+            Embedded Learner Board has a lot of essential basic components designed on to the board, i.e.,
+            16×2 alphanumeric display, Relay, Potentiometer, IOT module.
+        </p>
+        <p>
+            The board can be easily mounted on another board or project with the help of a mounting hole.
+        </p>
+        <p>
+            All Sensors are Plug and play.
+        </p>
+        <p>
+            Auto Programmable.
+        </p>
+        <p>
+            Turn on/off loads using relays (4 Relays).
+        </p>
+        <p>
+            Loads can be turned ON using webpage.
+        </p>
+        <p>
+            Smart WIFI configuration is available.
+        </p>
+        <p>
+            The firmware/code can be upgraded over the air.
+        </p>
+        <p>
+            There is a common power supply to all the elements if needed. The size of the board is quite
+            compact even with so many components on the board.
+        </p>
+        <p>
+            Also, the hardware part is really affordable and low-cost compared to the market cost of
+            individual components.
+        </p>
+        <p>
+            These sessions are quite informative. The concept of these sessions is to explore the
+            possibilities that can be developed with the board. This learner board has a good potential to
+            at least create a good competition in the market for such learner boards.
+        </p>
+        <p>
+            All in all, the Embedded Learner Board by trios is a revolutionary DIY embedded learning system
+            that not only teaches you programming and coding but also gives a hands-on learning experience.
+        </p>
+    </div>
+</section>
 {% endblock %}
