--- a/app/view/beginner/footer.twig
+++ b/app/view/beginner/footer.twig
@@ -1,13 +1,11 @@
-<footer class="ud-footer ud-footer-bottom wow fadeInUp" data-wow-delay=".15s">
-    <div class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <p class="ud-footer-bottom-left">
-                        IOT Beginner &#169; {{ "now"|date("Y") }}
-                    </p>
-                </div>
+<!-- Footer Start -->
+<footer class="footer mt-auto py-3 bg-dark">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="text-center">{{ "now"|date("Y") }} &#169; IOT Beginner. All Rights Reserved.</p>
             </div>
         </div>
     </div>
 </footer>
+<!-- Footer End -->
