--- a/app/view/beginner/learning_board.twig
+++ b/app/view/beginner/learning_board.twig
@@ -1,102 +1,125 @@
 {% extends 'layout.twig' %}
 
 {% block content %}
-<section class="ud-blog-details">
+<section class="learning-board">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="ud-blog-details-image">
+                <div class="learning-board-image">
                     <img src="assets/images/learning_board.png" alt="IOT Learning Board" />
                 </div>
             </div>
 
             <div class="col-lg-12">
-                <div class="ud-blog-details-content">
-                    <h1 class="ud-blog-details-title">
+                <div class="learning-board-content">
+                    <h1 class="learning-board-title">
                         IOT Learning Board
                     </h1>
-                    <p class="ud-blog-details-para">
-                        Students look for low-cost solutions that are easily available in the market, out of the box
+                    <p class="learning-board-para">
+                        Students look for low-cost solutions that are easily available in the market, out of the
+                        box
                         ready
-                        to use, modular, and self-explanatory. To start learning embedded systems, the first thing that
+                        to use, modular, and self-explanatory. To start learning embedded systems, the first
+                        thing that
                         is
-                        pretty basic and common is Arduino and Raspberry Pi. These two embedded boards are feature-rich,
-                        compact size with high computing power and are available with various versions and in various
+                        pretty basic and common is Arduino and Raspberry Pi. These two embedded boards are
+                        feature-rich,
+                        compact size with high computing power and are available with various versions and in
+                        various
                         form
                         factors.
                     </p>
-                    <p class="ud-blog-details-para">
-                        But certainly, while learning, one also needs a lot of complementary hardware that is common in
+                    <p class="learning-board-para">
+                        But certainly, while learning, one also needs a lot of complementary hardware that is
+                        common in
                         most
-                        prototype projects. For example, push-buttons, LEDs, relay, motors, display, sensors, buzzers,
+                        prototype projects. For example, push-buttons, LEDs, relay, motors, display, sensors,
+                        buzzers,
                         etc.
                     </p>
-                    <p class="ud-blog-details-para">
+                    <p class="learning-board-para">
                         However, during the learning phase, you do not have enough exposure to decide what other
                         components
-                        need to be purchased and what can be the most useful feature that we can have in our project.
+                        need to be purchased and what can be the most useful feature that we can have in our
+                        project.
                         It’s
-                        only after learning about the sensor that we realize how useful it can be to us in a specific
+                        only after learning about the sensor that we realize how useful it can be to us in a
+                        specific
                         way.
                     </p>
-                    <p class="ud-blog-details-para">
-                        If this initial phase has fewer options to explore, then learning becomes a tedious task and the
-                        enthusiasm that we start with goes to waste. Only theoretical knowledge or reading about sensors
+                    <p class="learning-board-para">
+                        If this initial phase has fewer options to explore, then learning becomes a tedious task
+                        and the
+                        enthusiasm that we start with goes to waste. Only theoretical knowledge or reading about
+                        sensors
                         and
-                        boards cannot make a good impression as compared to getting hands-on experience while creating
+                        boards cannot make a good impression as compared to getting hands-on experience while
+                        creating
                         one.
                     </p>
-                    <p class="ud-blog-details-para">
-                        This is where the Embedded Learner Board comes into the picture. This learning board is designed
+                    <p class="learning-board-para">
+                        This is where the Embedded Learner Board comes into the picture. This learning board is
+                        designed
                         and
-                        developed by our team it is a new board, it justifies its name because the board is specifically
-                        designed to improve the learning experience of the students. The board can be easily connected
+                        developed by our team it is a new board, it justifies its name because the board is
+                        specifically
+                        designed to improve the learning experience of the students. The board can be easily
+                        connected
                         with
                         the help of jumper wires.
                     </p>
 
-                    <h2 class="ud-blog-details-subtitle">Features</h2>
-                    <p class="ud-blog-details-para">
+                    <h2 class="learning-board-subtitle">Features</h2>
+                    <p class="learning-board-para">
                         Embedded Learner Board has a lot of essential basic components designed on to the board.
-                        The board can be easily mounted on another board or project with the help of a mounting hole.
+                        The board can be easily mounted on another board or project with the help of a mounting
+                        hole.
                     </p>
 
                     <div class="ud-feature-content">
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> All Sensors are Plug and
+                        <p class="learning-board-para"><i class="icon-right-open"></i> All Sensors are
+                            Plug and
                             Play
                         </p>
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> Auto Programmable
+                        <p class="learning-board-para"><i class="icon-right-open"></i> Auto Programmable
                         </p>
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> Turn on/off loads using
+                        <p class="learning-board-para"><i class="icon-right-open"></i> Turn on/off loads
+                            using
                             relays (4 Relays)
                         </p>
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> Loads can be turned ON
+                        <p class="learning-board-para"><i class="icon-right-open"></i> Loads can be turned
+                            ON
                             using web page
                         </p>
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> Smart WIFI configuration
+                        <p class="learning-board-para"><i class="icon-right-open"></i> Smart WIFI
+                            configuration
                             is available
                         </p>
-                        <p class="ud-blog-details-para"><i class="fas fa-chevron-right"></i> The firmware/code can be
+                        <p class="learning-board-para"><i class="icon-right-open"></i> The firmware/code
+                            can be
                             upgraded over the air
                         </p>
                     </div>
 
-                    <p class="ud-blog-details-para">
-                        There is a common power supply to all the elements if needed. The size of the board is quite
+                    <p class="learning-board-para">
+                        There is a common power supply to all the elements if needed. The size of the board is
+                        quite
                         compact even with so many components on the board.
                     </p>
-                    <p class="ud-blog-details-para">
+                    <p class="learning-board-para">
                         Also, the hardware part is really affordable and low-cost compared to the market cost of
                         individual components.
                     </p>
-                    <p class="ud-blog-details-para">
+                    <p class="learning-board-para">
                         These sessions are quite informative. The concept of these sessions is to explore the
-                        possibilities that can be developed with the board. This learner board has a good potential
+                        possibilities that can be developed with the board. This learner board has a good
+                        potential
                         to at least create a good competition in the market for such learner boards.
                     </p>
-                    <p class="ud-blog-details-para">
+                    <p class="learning-board-para">
                         All in all, the Embedded Learner Board by trios is a revolutionary DIY embedded learning
-                        system that not only teaches you programming and coding but also gives a hands-on learning
+                        system that not only teaches you programming and coding but also gives a hands-on
+                        learning
                         experience.
                     </p>
                 </div>
