--- a/app/view/layout.twig
+++ b/app/view/layout.twig
@@ -13,24 +13,25 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" />
     {% endif %}
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style"
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-        media="print" onload="this.media='all';this.onload = null;">
-
-    <link rel="stylesheet" href="assets/css/packages.min.css?v1.1" media="print"
+    <link rel="stylesheet" href="assets/css/custom-fonts.css" media="print"
         onload="this.media='all';this.onload = null;" />
+
     {% if siteEnv == 'prod' %}
-    <link rel="stylesheet" href="assets/css/{{customUI}}/custom-style.min.css?v1.1" media="print"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/css/{{customUI}}/custom-style.min.css?v2.0.1" media="print"
         onload="this.media='all';this.onload = null;" />
+
     {% else %}
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/{{customUI}}/custom.css" />
-    {% block stylecontent %} {% endblock %}
+    <!-- {% block stylecontent %} {% endblock %} -->
     {% endif %}
 
+    <link rel="stylesheet" href="assets/css/fontello.min.css" media="print"
+        onload="this.media='all';this.onload = null;" />
 </head>
 
 <body>
@@ -42,68 +43,15 @@
 
     {% include customUI ~ '/footer.twig' %}
 
-    <!-- ====== Back To Top Start ====== -->
-    <a href="javascript:void(0)" class="back-to-top" title="Go to Top">
-        <i class="fa fa-angle-up" aria-hidden="true"></i>
-    </a>
-    <!-- ====== Back To Top End ====== -->
-
-    <noscript>
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
-    </noscript>
-
-    <script src="assets/js/packages.min.js?v1.1"></script>
     {% if siteEnv == 'prod' %}
-    <script src="assets/js/scroll.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
     {% else %}
-    <script src="assets/js/scroll.js"></script>
-    {% block scriptcontent %}{% endblock %}
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
     {% endif %}
 
-    <script>
-        // ==== for menu scroll
-        const pageLink = document.querySelectorAll(".ud-menu-scroll");
-
-        pageLink.forEach((elem) => {
-            elem.addEventListener("click", (e) => {
-                e.preventDefault();
-                document.querySelector(elem.getAttribute("href")).scrollIntoView({
-                    behavior: "smooth",
-                    offsetTop: 1 - 60,
-                });
-            });
-        });
-
-        // section menu active
-        function onScroll(event) {
-            const sections = document.querySelectorAll(".ud-menu-scroll");
-            const scrollPos =
-                window.pageYOffset ||
-                document.documentElement.scrollTop ||
-                document.body.scrollTop;
-
-            for (let i = 0; i < sections.length; i++) {
-                const currLink = sections[i];
-                const val = currLink.getAttribute("href");
-                const refElement = document.querySelector(val);
-                const scrollTopMinus = scrollPos + 73;
-                if (
-                    refElement.offsetTop <= scrollTopMinus &&
-                    refElement.offsetTop + refElement.offsetHeight > scrollTopMinus
-                ) {
-                    document
-                        .querySelector(".ud-menu-scroll")
-                        .classList.remove("active");
-                    currLink.classList.add("active");
-                } else {
-                    currLink.classList.remove("active");
-                }
-            }
-        }
-
-        window.document.addEventListener("scroll", onScroll);
-    </script>
+    {% block scriptcontent %}{% endblock %}
 </body>
 
 </html>
