--- a/app/view/login.twig
+++ b/app/view/login.twig
@@ -1,41 +1,41 @@
 {% extends 'layout.twig' %}
 
-{% block stylecontent %}
-<link rel="stylesheet" href="assets/css/login.css">
-{% endblock %}
-
 {% block content %}
-<section class="ud-login">
+<section class="login">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <div class="ud-login-wrapper">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card border-0 shadow rounded-3 my-5">
+                    <div class="card-body p-4 p-sm-5">
+                        <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
+                        <form action="{{ path_for('login') }}" method="POST" autocomplete="off">
+                            <div class="form-floating mb-3">
+                                <input class="form-control {{errors.username ? 'is-invalid' : ''}}" id="username"
+                                    name="username" placeholder="Username" type="username" value="{{ old.username }}">
+                                {% if errors.username %}
+                                <div class="invalid-feedback">
+                                    {{ errors.username | first }}
+                                </div>
+                                {% endif %}
 
-                    {% include 'flash.twig' %}
+                                <label for="username">Username</label>
+                            </div>
+                            <div class="form-floating mb-3">
 
-                    <form action="{{ path_for('login') }}" method="POST" autocomplete="off" class="ud-login-form">
-                        <div class="ud-form-group">
-                            <input class="{{errors.username ? 'is-invalid' : ''}}" id="username" name="username"
-                                placeholder="Username" type="username" value="{{ old.username }}">
-                            {% if errors.username %}
-                            <div class="invalid-feedback">
-                                {{ errors.username | first }}
+                                <input class="form-control {{errors.password ? 'is-invalid' : ''}}" id="password"
+                                    name="password" placeholder="Password" type="password">
+                                {% if errors.password %}
+                                <div class="invalid-feedback">
+                                    {{ errors.password | first }}
+                                </div>
+                                {% endif %}
+                                <label for="password">Password</label>
                             </div>
-                            {% endif %}
-                        </div>
-                        <div class="ud-form-group">
-                            <input class="{{errors.password ? 'is-invalid' : ''}}" id="password" name="password"
-                                placeholder="Password" type="password">
-                            {% if errors.password %}
-                            <div class="invalid-feedback">
-                                {{ errors.password | first }}
+                            <div class="d-grid">
+                                <button class="btn btn-primary btn-login login-btn" type="submit">Login</button>
                             </div>
-                            {% endif %}
-                        </div>
-                        <div class="ud-form-group">
-                            <button type="submit" class="ud-main-btn w-100">Login</button>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
