--- a/app/view/trios/contact.twig
+++ b/app/view/trios/contact.twig
@@ -5,31 +5,31 @@
 {% endblock %}
 
 {% block content %}
-<section id="contact" class="ud-contact">
+<section id="contact" class="contact">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-xl-12 col-lg-12">
-                <div class="ud-contact-content-wrapper">
-                    <div class="ud-contact-title">
+                <div class="contact-content-wrapper">
+                    <div class="contact-title">
                         <h2>Let’s talk!</h2>
                     </div>
-                    <div class="ud-contact-info-wrapper">
-                        <div class="ud-single-info">
-                            <div class="ud-info-icon">
-                                <i class="fas fa-map-marker-alt"></i>
+                    <div class="contact-info-wrapper">
+                        <div class="single-info">
+                            <div class="info-icon">
+                                <i class="icon-location"></i>
                             </div>
-                            <div class="ud-info-meta">
+                            <div class="info-meta">
                                 <h5>Our Location</h5>
                                 <p>TRIOS TECHNOLOGIES PVT LTD, 24/5,RANI ARCADE, 2nd FLOOR,</p>
                                 <p>1st AVENUE, ASHOK NAGAR,</p>
                                 <p>CHENNAI-600083.</p>
                             </div>
                         </div>
-                        <div class="ud-single-info">
-                            <div class="ud-info-icon">
-                                <i class="far fa-envelope"></i>
+                        <div class="single-info">
+                            <div class="info-icon">
+                                <i class="icon-mail"></i>
                             </div>
-                            <div class="ud-info-meta">
+                            <div class="info-meta">
                                 <h5>How Can We Help?</h5>
                                 <p><b>Email:</b> support@triostechnology.com</p>
                                 <p>
