--- a/app/view/trios/footer.twig
+++ b/app/view/trios/footer.twig
@@ -1,13 +1,11 @@
-<footer class="ud-footer">
-    <div class="ud-footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>
-                        Trios Technologies Pvt Ltd. &#169; {{ "now"|date("Y") }}
-                    </p>
-                </div>
+<!-- Footer Start -->
+<footer class="footer mt-auto py-3 bg-dark">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="text-center">{{ "now"|date("Y") }} &#169; Trios Technologies Pvt Ltd. All Rights Reserved.</p>
             </div>
         </div>
     </div>
 </footer>
+<!-- Footer End -->
