--- a/assets/css/beginner/custom.css
+++ b/assets/css/beginner/custom.css
@@ -1,18 +1,18 @@
-/*==========COMMON css==========*/
+/* Common CSS */
 :root {
   --font: "Inter", sans-serif;
   --body-color: #637381;
   --heading-color: #212b36;
   --primary-color: #3056d3;
-  --white: #ffffff;
+  --white: #fff;
 }
 
 body {
-  font-family: var(--font);
+  font-family: var(--font), var(--bs-body-font-family);
   font-weight: normal;
   font-style: normal;
   color: var(--body-color);
-  overflow-x: hidden;
+  background: var(--white);
 }
 
 * {
@@ -24,14 +24,6 @@ body {
 
 img {
   max-width: 100%;
-}
-
-a,
-button,
-input,
-textarea {
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
 }
 
 a,
@@ -55,15 +47,6 @@ i,
 span,
 a {
   display: inline-block;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
 }
 
 h1,
@@ -101,169 +84,239 @@ h6 {
   font-size: 16px;
 }
 
-ul,
-ol {
-  margin: 0px;
-  padding: 0px;
-  list-style-type: none;
-}
-
 p {
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
   color: var(--body-color);
-  margin: 0px;
 }
 
-/*===== All Button Style =====*/
-.ud-main-btn {
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  font-weight: 500;
-  font-size: 16px;
-  border-radius: 5px;
-  padding: 15px 25px;
+/* utils */
+.btn-primary {
   border: 1px solid transparent;
   color: var(--white);
-  cursor: pointer;
-  z-index: 5;
-  -webkit-transition: all 0.4s ease-out 0s;
-  transition: all 0.4s ease-out 0s;
   background: var(--primary-color);
 }
 
-.ud-main-btn:hover {
-  color: var(--white);
-  background: var(--heading-color);
+/* Navbar */
+/* .navbar {
+  padding: 0;
+} */
+
+.navbar-brand {
+  padding: 10px;
 }
 
+.navbar-border {
+  background-color: rgba(255, 255, 255);
+  box-shadow: inset 0 -1px 0 0 rgb(0 0 0 / 10%);
+}
+
+.nav-link {
+  color: var(--heading-color);
+}
+
+/* Home CSS */
+.hero {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url("../../images/beginner/cover.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero-title {
+  color: var(--white);
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 50px;
+  margin-top: 30%;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.features {
+  padding-top: 120px;
+  padding-bottom: 90px;
+}
+
+.single-feature {
+  margin-bottom: 40px;
+}
+
+.single-feature:hover .feature-icon::before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.single-feature .feature-icon {
+  width: 70px;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 14px;
+  background: var(--primary-color);
+  font-size: 32px;
+  color: var(--white);
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.single-feature .feature-icon::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 14px;
+  background: var(--primary-color);
+  opacity: 0.2;
+  z-index: -1;
+  -webkit-transform: rotate(23deg);
+  transform: rotate(23deg);
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+}
+
+.single-feature .feature-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  margin-bottom: 12px;
+}
+
+.single-feature .feature-desc {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 40px;
+}
+
+/* Login CSS */
+.login {
+  padding: 89px 0;
+}
+
+.login-btn {
+  padding: 15px 25px;
+}
+
+/* ====== Learning Board CSS ====== */
+.learning-board {
+  padding-top: 120px;
+}
+
+.learning-board-image {
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 500px;
+}
+
+.learning-board-image > img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center center;
+  object-position: center center;
+}
+
+.learning-board-content {
+  padding-top: 60px;
+}
+
+.learning-board-title {
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 50px;
+  margin-bottom: 35px;
+}
+
+.learning-board-para {
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 30px;
+}
+
+.learning-board-subtitle {
+  font-weight: 700;
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+
+.learning-board-title {
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 50px;
+  margin-bottom: 35px;
+}
+
+.learning-board-subtitle {
+  font-weight: 700;
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+
+.learning-board-para {
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 25px;
+}
+
+/* Responsive CSS */
 @media (max-width: 767px) {
   .container {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 0 30px;
+  }
+
+  .learning-board {
+    padding-top: 80px;
+  }
+
+  .learning-board-image {
+    height: 300px;
+  }
+
+  .learning-board-title {
+    font-size: 26px;
+    line-height: 35px;
+  }
+
+  .learning-board-subtitle {
+    font-size: 22px;
+    margin-bottom: 25px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .container {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
   }
-}
-
-.back-to-top {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  background: var(--primary-color);
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-radius: 5px;
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  z-index: 99;
-  color: var(--white);
-}
-
-.back-to-top:hover {
-  color: var(--white);
-  background: var(--heading-color);
-}
-
-/* ===== Header CSS ===== */
-.ud-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 99;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-.sticky {
-  position: fixed;
-  z-index: 99;
-  background-color: rgba(255, 255, 255);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-  -webkit-box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-.sticky .navbar {
-  padding: 0;
-}
-
-.navbar {
-  padding: 0px 0;
-  border-radius: 5px;
-  position: relative;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-.navbar-brand {
-  padding: 0;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
   (max-width: 767px) {
+  .navbar-nav {
+    padding: 20px 30px;
+  }
+
   .navbar-brand {
     padding: 5px 0px;
   }
-}
 
-.navbar-brand img {
-  max-width: 160px;
-}
-
-.navbar-toggler {
-  padding: 0;
-}
-
-.navbar-toggler .toggler-icon {
-  width: 30px;
-  height: 2px;
-  background-color: var(--white);
-  display: block;
-  margin: 5px 0;
-  position: relative;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-.navbar-toggler.active .toggler-icon:nth-of-type(1) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  top: 7px;
-}
-
-.navbar-toggler.active .toggler-icon:nth-of-type(2) {
-  opacity: 0;
-}
-
-.navbar-toggler.active .toggler-icon:nth-of-type(3) {
-  -webkit-transform: rotate(135deg);
-  transform: rotate(135deg);
-  top: -7px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
   .navbar-collapse {
     position: absolute;
     top: 100%;
@@ -283,356 +336,106 @@ p {
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav {
-    padding: 20px 30px;
-  }
-}
-
-.navbar-nav .nav-item {
-  position: relative;
-  padding: 0px 20px;
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .navbar-nav .nav-item {
-    padding: 0px 12px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item {
-    padding: 0px;
-  }
-}
-
-.navbar-nav .nav-item > a {
-  font-size: 16px;
-  font-weight: 400;
-  color: var(--white);
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-  padding: 25px 8px;
-  position: relative;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item > a {
-    display: block;
-    padding: 8px 0;
-    color: var(--heading-color);
-  }
-}
-
-.navbar-nav .nav-item > a:hover,
-.navbar-nav .nav-item > a.active {
-  color: var(--white);
-  opacity: 0.5;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item > a:hover,
-  .navbar-nav .nav-item > a.active {
-    color: var(--primary-color);
-    opacity: 1;
-  }
-}
-
-.navbar-nav .nav-item .ud-submenu {
-  position: absolute;
-  width: 250px;
-  background: var(--white);
-  top: 110%;
-  padding: 20px 30px;
-  -webkit-box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
-  box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
-  border-radius: 5px;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item .ud-submenu {
-    position: static;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    width: 100%;
-    padding: 0px;
-    opacity: 1;
-    visibility: visible;
-    display: none;
-  }
-}
-
-.navbar-nav .nav-item .ud-submenu.show {
-  display: block;
-}
-
-.navbar-nav .nav-item .ud-submenu .ud-submenu-link {
-  padding: 7px 0;
-  color: var(--heading-color);
-  font-size: 14px;
-}
-
-.navbar-nav .nav-item .ud-submenu .ud-submenu-link:hover {
-  color: var(--primary-color);
-}
-
-.navbar-nav .nav-item:hover > a {
-  color: var(--white);
-  opacity: 0.5;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item:hover > a {
-    color: var(--primary-color);
-    opacity: 1;
-  }
-}
-
-.navbar-nav .nav-item:hover > .ud-submenu {
-  opacity: 1;
-  visibility: visible;
-  top: 100%;
-}
-
-.navbar-nav .nav-item.nav-item-has-children > a {
-  position: relative;
-}
-
-.navbar-nav .nav-item.nav-item-has-children > a::after {
-  content: "";
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-bottom: 2px solid;
-  border-right: 2px solid;
-  -webkit-transform: rotate(45deg) translateY(-50%);
-  transform: rotate(45deg) translateY(-50%);
-  right: -15px;
-  top: 50%;
-  margin-top: -2px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-nav .nav-item.nav-item-has-children > a::after {
-    right: 5px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px),
-  (max-width: 767px) {
-  .navbar-btn {
-    position: absolute;
-    top: 50%;
-    right: 50px;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-}
-
-.navbar-btn .ud-main-btn {
-  padding: 8px 16px;
-  background: transparent;
-}
-
-.navbar-btn .ud-login-btn:hover {
-  opacity: 0.5;
-}
-
-.navbar-btn .ud-white-btn {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-.navbar-btn .ud-white-btn:hover {
-  background: white;
-  color: var(--heading-color);
-}
-
-.sticky .navbar-toggler .toggler-icon {
-  background-color: var(--heading-color);
-}
-
-.sticky .navbar-nav .nav-item:hover > a {
-  color: var(--primary-color);
-  opacity: 1;
-}
-
-.sticky .navbar-nav .nav-item a {
-  color: var(--heading-color);
-}
-
-.sticky .navbar-nav .nav-item a.active,
-.sticky .navbar-nav .nav-item a:hover {
-  color: var(--primary-color);
-  opacity: 1;
-}
-
-.sticky .navbar-btn .ud-main-btn.ud-login-btn {
-  color: var(--heading-color);
-}
-
-.sticky .navbar-btn .ud-main-btn.ud-login-btn:hover {
-  color: var(--primary-color);
-  opacity: 1;
-}
-
-.sticky .navbar-btn .ud-white-btn {
-  background: var(--primary-color);
-  color: var(--white);
-}
-
-.sticky .navbar-btn .ud-white-btn:hover {
-  background: var(--heading-color);
-}
-
-/* ====== Blog Details CSS ====== */
-.ud-blog-details {
-  padding-top: 120px;
-}
-
-@media (max-width: 767px) {
-  .ud-blog-details {
-    padding-top: 80px;
-  }
-}
-
-.ud-blog-details-image {
-  position: relative;
-  border-radius: 5px;
-  overflow: hidden;
-  height: 500px;
-}
-
-@media (max-width: 767px) {
-  .ud-blog-details-image {
-    height: 300px;
-  }
-}
-
-.ud-blog-details-image > img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center center;
-  object-position: center center;
-}
-
-.ud-blog-details-content {
-  padding-top: 60px;
-}
-
 @media only screen and (min-width: 1400px) and (max-width: 1920px),
   only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .ud-blog-details-content {
+  .learning-board-content {
     padding-right: 50px;
   }
 }
 
-.ud-blog-details-title {
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 50px;
-  margin-bottom: 35px;
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .learning-board-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .learning-board-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (min-width: 1400px) and (max-width: 1920px),
+  only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .learning-board-content {
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .learning-board-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
 
 @media (max-width: 767px) {
-  .ud-blog-details-title {
+  .learning-board-subtitle {
+    font-size: 22px;
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .learning-board-title {
     font-size: 26px;
     line-height: 35px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-  .ud-blog-details-title {
+  .learning-board-title {
     font-size: 30px;
     line-height: 40px;
   }
 }
 
-.ud-blog-details-para {
-  font-size: 16px;
-  line-height: 28px;
-  margin-bottom: 30px;
-}
-
-.ud-blog-details-subtitle {
-  font-weight: 700;
-  font-size: 26px;
-  margin-bottom: 30px;
-}
-
 @media (max-width: 767px) {
-  .ud-blog-details-subtitle {
+  .learning-board-subtitle {
     font-size: 22px;
     margin-bottom: 25px;
   }
 }
 
-.ud-blog-details-title {
-  font-weight: 700;
-  font-size: 35px;
-  line-height: 50px;
-  margin-bottom: 35px;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .hero {
+    padding-top: 40px;
+  }
 }
 
 @media (max-width: 767px) {
-  .ud-blog-details-title {
-    font-size: 26px;
-    line-height: 35px;
+  .hero {
+    padding-top: 40px;
   }
 }
 
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  .ud-blog-details-title {
-    font-size: 30px;
-    line-height: 40px;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .hero-content .hero-title {
+    font-size: 32px;
+    line-height: 50px;
+    margin-top: 35%;
   }
-}
-
-.ud-blog-details-subtitle {
-  font-weight: 700;
-  font-size: 26px;
-  margin-bottom: 30px;
 }
 
 @media (max-width: 767px) {
-  .ud-blog-details-subtitle {
-    font-size: 22px;
-    margin-bottom: 25px;
+  .hero-content .hero-title {
+    font-size: 24px;
+    line-height: 34px;
   }
 }
 
-.ud-blog-details-para {
-  font-size: 16px;
-  line-height: 28px;
-  margin-bottom: 25px;
+@media (max-width: 767px) {
+  .features {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
 }
 
-/* ===== Footer CSS ===== */
-.ud-footer {
-  background: var(--heading-color);
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.ud-footer-bottom {
-  padding: 35px 0;
-  border-top: 1px solid rgba(136, 144, 164, 0.43);
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .single-feature .feature-title {
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
